# Spellcraft

./: .gitignore  CHANGELOG.md  CHAOS_MONKEY_EVALUATION_REPORT.md  CLASH-QUICK-REFERENCE.md  CLEANUP_SUMMARY.md  EXAMPLES_README.md  FINAL_CLEANUP_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  KAOS_BROWNIE_EVALUATION_REPORT.md  PROJECT_STATUS.md  README.md  RELEASE-v0.4.0.md  RELEASE-v0.5.0.md  RELEASE-v0.6.0.md  RELEASE-v0.8.0.md  SIGNAL_USAGE_TRACKER_REPORT.md  V0.4.0-ROADMAP.md  adc  analyze_failures.sh  cabal.project  spellcraft.cabal  stack.yaml  test-if.vhd  test-signal-ref.vhd  test_lzx.sh  test_parse_rate.sh  test_parser.hs  vdhl-analyzer  vhdl-analyzer.cabal
.github/: README.md
.github/workflows/: ci.yml
app/: Main.hs
contracts/: README.md  adc-001-vhdl-parser.qmd  adc-002-component-library.qmd  adc-003-clock-propagation.qmd  adc-004-combinatorial-analysis.qmd  adc-005-cli-reporting.qmd  adc-006-clash-type-level.qmd  adc-007-clock-sources.qmd  adc-008-clash-integration.md  adc-008-vhdl-parser-enhancement.qmd  adc-009-vhdl-parser-enhancement.qmd  adc-010-videomancer-analysis.qmd  adc-011-chaos-monkey.qmd  adc-011-kaos-elf.qmd  adc-012-violation-detection.qmd  adc-013-process-parsing.qmd  adc-014-warning-infrastructure.qmd  adc-015-architecture-body-parsing.qmd  adc-016-attribute-parsing.qmd  adc-017-slice-indexing.qmd  adc-018-signal-initialization.qmd  adc-021-port-map-expressions.qmd  adc-022-indexed-signal-assignments.qmd  adc-024-case-statement-parsing.qmd  adc-025-advanced-vhdl-parsing.qmd  adc-026-selected-name-parsing.qmd  adc-028-parser-backlog.md  adc-029-multi-file-analysis.qmd  contracts-README.md
contrib/: CONTRIB_CHANGES.md
contrib/lzx-kaos-levels/: enhance-level1-undriven.vhd
contrib/lzx-kaos-levels/multi-file/: README.md  level6_component_b.vhd  level6_top.vhd
contrib/t4mber/codeglow/: DESIGN_NOTES.md  README.md  SPELLCRAFT_ANALYSIS.md  codeglow.vhd  color_gradient_mapper.vhd  shimmer_modulator.vhd  star_ray_generator.vhd
docs/: VDHL Analyzer PRD.md  architecture-type-level-vs-runtime.md  clash-examples-summary.md  clash-module-tree.md
docs/reports/: 2025-11-12-comprehensive-evaluation.md  2025-11-12-corpus-metrics.md  2025-11-12-kaos-elf-evaluation.md  ADC_ITERATION_1_REPORT.md  ADC_LOOP_COMPLETE.md  DIAGRAM_GENERATION_SUMMARY.md  LINT_REPORT.md  PARSING_COVERAGE_REPORT.md  README.md  SIGNAL_USAGE_TRACKER_REPORT.md
examples/: 02_multiple_pll_cascading.vhd  03_valid_design.vhd  04_boundary_violation.vhd  05_generic_range_violation.vhd  README.md  pll_violation.vhd  ports.vhd  test.vhd  test_output_port.vhd  test_simple_out.vhd  test_underscore.vhd  test_vector.vhd  test_vector_no_newline.vhd  test_vector_params.vhd  test_vector_simple.vhd
examples-clash/: 01_pll_violation.hs  02_multiple_pll_cascading.hs  03_valid_design.hs  04_vhdl_style_syntax.hs  05_dsl_style.hs  ClashExample.hs  DEMO-TYPE-ERRORS.md  README.md  VHDL-STYLE-SYNTAX-GUIDE.md
examples-vhdl/: 01_pll_frequency_violation.vhd  06_fan_out_violation.vhd  07-luma-proc-lars.vhd  README.md  simple.vhd  test_inout.vhd  test_out.vhd  test_ports.vhd
policies/: parsing-anti-patterns.md
scripts/: chaos-monkey-impl.py  chaos-monkey-subtlety.py  chaos-monkey.py  kaos-brownie-impl.py  kaos-elf-impl.py  kaos-elf-subtlety.py  kaos-elf.py
src/ComponentLibs/: TestComponents.hs
src/VHDL/: AST.hs  Lexer.hs  Parser.hs  SourceLocation.hs
src/VHDL/Analysis/: ArithmeticBounds.hs  ClashFile.hs  ClockGraph.hs  ClockSource.hs  Combinatorial.hs  ControlFlow.hs  Expression.hs  FrequencyCalc.hs  FrequencyParser.hs  MultiFile.hs  Process.hs  Propagation.hs  SignalUsage.hs  Violation.hs
src/VHDL/CLI/: Color.hs  Export.hs  Format.hs  Options.hs  Report.hs  Videomancer.hs
src/VHDL/Clash/: Constraints.hs  Domains.hs  FrequencyCheck.hs  Types.hs
src/VHDL/Constraint/: Library.hs  Types.hs  Units.hs  Violation.hs
src/VHDL/Videomancer/: Analysis.hs  Config.hs  Constraint.hs  Report.hs  Validation.hs
test/: compile-time-failure-examples.hs  type-error-test.hs
test/VHDL/Analysis/: MultiFileSpec.hs
test/VHDL/Clash/: ExampleValidationSpec.hs  TypeLevelSpec.hs
test/VHDL/Parser/: WorkLibrarySpec.hs
test/VHDL/Videomancer/: ConfigSpec.hs
test/fixtures/: README_TEST_CASES.md  attribute.vhd  char_literal.vhd  codeglow_pattern.vhd  complex_expr.vhd  concat_op.vhd  conditional_assign.vhd  constant_decl.vhd  constant_in_expr.vhd  contrast_minimal.vhd  downto_slice.vhd  entity_generic.vhd  generate_stmt.vhd  ieee_library.vhd  inline_comment.vhd  just_arch.vhd  multi_entity.vhd  multi_signal_decl.vhd  numeric_std.vhd  power_op.vhd  power_paren.vhd  signal_init.vhd  simple_arch.vhd  simple_process.vhd  simple_slice.vhd  test_attr_expr.vhd  test_case.vhd  test_concat.vhd  test_entity_arch.vhd  test_entity_inst.vhd  test_entity_inst_detailed.vhd  test_for_loop.vhd  test_hex_init.vhd  test_indexed_assign.vhd  test_minimal_parse.vhd  test_multiline_portmap.vhd  test_portmap_record_field.vhd  test_process_var.vhd  test_record_field_access.vhd  test_record_type.vhd  (+7 more)
test/fixtures/kaos-elf/: README.md  chaos-violations-level5.json  level2-partial.vhd  level3-bitgrowth.vhd  level4-cdc.vhd  level5-race.vhd
test/fixtures/kaos-elf/multi-file/: README.md  level6_component_a.vhd
test/fixtures/videomancer/: test-lumarian.json  test-mirrorbound.json
tests/: README.md  corpus_test.py
tests/fixtures/parser/: README.md  test-combo.vhd  test-keyword.vhd  test-process2.vhd  test-sensitivity.vhd
