cabal-version:      3.0
name:               spellcraft
version:            0.3.0
synopsis:           Spellcraft - Safe Programmable Electronics Linting Library
description:
  Spellcraft: Safe Programmable Electronics Linting Library & Code Review Analysis Framework Tool.
  A hardware design verification tool that helps you craft correct VHDL/Clash designs by checking
  physical constraints (frequencies, thermal limits, etc.) before synthesis using type-level programming.
license:            BSD-3-Clause
author:             ADC Code Generator
maintainer:         dev@example.com
category:           Hardware
build-type:         Simple

common shared-properties
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  default-extensions:
    DataKinds
    GADTs
    KindSignatures
    TypeFamilies
    TypeOperators
    OverloadedStrings
    LambdaCase
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances
    NumericUnderscores
    DuplicateRecordFields

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    VHDL.AST
    VHDL.Parser
    VHDL.Lexer
    VHDL.SourceLocation
    VHDL.Constraint.Types
    VHDL.Constraint.Library
    VHDL.Constraint.Units
    VHDL.Constraint.Violation
    VHDL.Clash.Types
    VHDL.Clash.FrequencyCheck
    VHDL.Clash.Domains
    VHDL.Clash.Constraints
    VHDL.Analysis.ClockGraph
    VHDL.Analysis.ClockSource
    VHDL.Analysis.FrequencyParser
    VHDL.Analysis.Propagation
    VHDL.Analysis.Violation
    VHDL.Analysis.FrequencyCalc
    VHDL.Analysis.Combinatorial
    VHDL.Analysis.Process
    VHDL.Analysis.Expression
    VHDL.Analysis.ClashFile
    VHDL.CLI.Options
    VHDL.CLI.Format
    VHDL.CLI.Report
    VHDL.CLI.Color
    VHDL.Videomancer.Config
    VHDL.Videomancer.Constraint
    VHDL.Videomancer.Validation
    VHDL.Videomancer.Report
    VHDL.Videomancer.Analysis
    VHDL.CLI.Videomancer
    ComponentLibs.TestComponents
  build-depends:
    , base >= 4.14 && < 5
    , text >= 1.2
    , bytestring >= 0.10
    , containers >= 0.6
    , megaparsec >= 9.0
    , parser-combinators >= 1.3
    , filepath >= 1.4
    , Glob >= 0.10
    , time >= 1.9
    , aeson >= 2.0
    , optparse-applicative >= 0.17
    , ansi-terminal >= 0.11
    , mtl >= 2.2
    , clash-prelude >= 1.8
    , clash-ghc >= 1.8
    , process >= 1.6

executable spellcraft
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , spellcraft
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite spellcraft-test
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    VHDL.Clash.TypeLevelSpec
    VHDL.Clash.ExampleValidationSpec
    VHDL.Videomancer.ConfigSpec
  build-depends:
    , base
    , spellcraft
    , hspec >= 2.9
    , QuickCheck >= 2.14
    , text
    , containers
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
